# Net-STM32-103-723-245

./: .gitignore  README.md
doc/Описание/: Device.ioc  Relay.ioc  Отладчик.txt
sources/: CMakeLists.txt  Network.uvmpw  Описание.txt
sources/5-Governor/: 5-Governor.uvoptx  5-Governor.uvprojx  CMakeLists.txt
sources/5-Governor/doc/: description.txt  laser.txt  Распиновка.ioc
sources/5-Governor/src/: Device.cpp
sources/5-Governor/src/Display/Font/: Font.cpp
sources/5-Governor/src/Hardware/: Keyboard.cpp  Keyboard.h  Timer.cpp  Timer.h
sources/5-Governor/src/Hardware/CDC/: CDC.cpp  CDC.h  usbd_desc.c
sources/5-Governor/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_IT.cpp  HAL_USART1.cpp
sources/5-Governor/src/Hardware/Modules/Laser/: Laser.cpp  Laser.h
sources/5-Governor/src/Menu/: MenuItemsDefs.h
sources/5-Governor/src/Menu/Pages/: PageDisplay.cpp  PageSystem.cpp  Pages.cpp
sources/5-Governor/src/Utils/: Buffer.h  RingBuffer.h
sources/Device/: CMakeLists.txt  Device.uvoptx  Device.uvprojx  Release.BAT
sources/Device/src/: Device.cpp  defines.h
sources/Device/src/Display/: Display.cpp  Zones.h
sources/Device/src/Display/Font/: Font.cpp
sources/Device/src/Hardware/: InterCom.cpp
sources/Device/src/Hardware/CDC/: CDC.cpp  CDC.h  usbd_conf.c  usbd_conf.h
sources/Device/src/Hardware/CMSIS/: startup_stm32f103xb.s  system_stm32f1xx.c
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_I2C.cpp  HAL_IT.cpp  HAL_RTC.cpp
sources/Device/src/Hardware/Modules/BH1750/: BH1750.cpp
sources/Device/src/Hardware/Modules/BME280/: BME280.cpp  bme280_driver.c
sources/Device/src/Hardware/Modules/CG-Anem/: CG-Anem.cpp
sources/Device/src/Hardware/Modules/ST7735/: ST7735.cpp
sources/Device/src/Menu/: Menu.h  MenuItems.h
sources/Device/src/Utils/: Buffer.h  Math.h
sources/Device/src/Utils/Text/: String.cpp  String.h  Text.cpp
sources/MS-1/: CMakeLists.txt  MS-1.sct  MS-1.uvoptx  MS-1.uvprojx
sources/MS-1/src/: Device.cpp  defines.h
sources/MS-1/src/Display/: Display.cpp
sources/MS-1/src/Hardware/: Beeper.cpp  InterCom.cpp
sources/MS-1/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_I2C.cpp  HAL_IT.cpp
sources/MS-1/src/Menu/Pages/: PageMeasures.cpp
sources/MS-1/src/Modules/BME280/: BME280.cpp
sources/MS-1/src/Modules/_Archiv/: HAL_USART2.cpp
sources/MS-1/src/Modules/_Archiv/BH1750/: BH1750.cpp  BH1750.h
sources/MS-1/src/Storage/: Measures.h
sources/MS-1/src/Utils/: Buffer.h
sources/Relay/: CMakeLists.txt  Relay.uvoptx  Relay.uvprojx
sources/Relay/src/: Device.cpp
sources/Relay/src/Display/: Display.cpp  Display.h  Zones.cpp
sources/Relay/src/Hardware/: Relay.cpp  Relay.h
sources/Relay/src/Hardware/CDC/: CDC.cpp  CDC.h  Decoder.cpp  Decoder.h  usbd_conf.c
sources/Relay/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_IT.cpp  stm32f1xx_hal_conf.h
sources/Relay/src/Hardware/Modules/HC12/: HC12.cpp
sources/Relay/src/Hardware/Modules/ST7735/: ST7735.cpp
sources/Relay/src/Menu/Pages/: PageHC12.cpp
sources/Relay/src/Settings/: Settings.h
sources/Relay/src/Utils/Text/: String.cpp
sources/VS/: CMakeLists.txt
sources/VS/Client-PC/: Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  Frame.h  Log.cpp  Log.h  Settings.cpp  Settings.h  defines.h  main.cpp  opt.h
sources/VS/Client-PC/Communicator/: Communicator.cpp  Communicator.h
sources/VS/Client-PC/Communicator/ComPort/: ComPort.cpp  ComPort.h
sources/VS/Client-PC/Communicator/HC12/: HC12.cpp  HC12.h
sources/VS/Client-PC/Communicator/HTTP/: HTTP.cpp  HTTP.h
sources/VS/Client-PC/Communicator/LAN/: ServerTCP.cpp  ServerTCP.h
sources/VS/Client-PC/Communicator/LAN/libnet/: netbase.cpp  netbase.h  netclient.cpp  netserver.cpp
sources/VS/Client-PC/Communicator/RS232/: rs232.c  rs232.h
sources/VS/Client-PC/Communicator/Server/: Server.cpp  Server.h
sources/VS/Client-PC/Controls/: ConsoleSCPI.cpp  ConsoleSCPI.h
sources/VS/Client-PC/Data/: ReceivedData.cpp  ReceivedData.h  Sensors.cpp  Sensors.h
sources/VS/Client-PC/Display/: Colors.cpp  Colors.h  Font.cpp  Font.h
sources/VS/Client-PC/Display/Diagram/: Canvas.cpp  Canvas.h  Diagram.cpp  Diagram.h
sources/VS/Client-PC/Display/Table/: Table.cpp  Table.h
sources/VS/Client-PC/Settings/: Settings.h
sources/VS/Client-PC/Utils/: Buffer.h  Clock.cpp  Clock.h  DynamicBuffer.cpp  DynamicBuffer.h  Math.cpp  Math.h  String.cpp  String.h  Timer.cpp  Timer.h
sources/VS/Client-PC/resources/: resources.rc
sources/VS/Device/: CMakeLists.txt  Frame.cpp
sources/VS/Device/Hardware/LAN/libnet/: netbase.cpp  netclient.cpp
sources/VS/MS-1/: Application.cpp  CMakeLists.txt  Frame.cpp  Frame.h
sources/VS/MS-1/Hardware/CDC/: CDC_gui.cpp
sources/VS/MS-1/Hardware/HAL/: HAL_PINS_win.cpp  HAL_win.cpp  stm32f3xx_hal_conf_gui.cpp
sources/VS/MS-1/Hardware/LAN/libnet/: netbase.cpp  netpacket.cpp  netserver.cpp
sources/VS/MS-1/Modules/W25Q80DV/: W25Q80DV_win.cpp
sources/common/STM32Cube_F1/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rtc.h
sources/common/STM32Cube_F1/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c  stm32f1xx_hal_cortex.c  stm32f1xx_hal_dma.c  stm32f1xx_hal_gpio.c  stm32f1xx_hal_i2c.c  stm32f1xx_hal_pcd.c  stm32f1xx_hal_pcd_ex.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_rcc_ex.c  stm32f1xx_hal_rtc.c  stm32f1xx_hal_spi.c  stm32f1xx_hal_uart.c  stm32f1xx_ll_usb.c
sources/common/STM32Cube_F1/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
sources/common/STM32Cube_F1/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
sources/common/STM32Cube_F1/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c
sources/common/_VS_KEIL/std_includes/: cstring  string.h
sources/fonts/: Font12_10.sgfnt  convert12_10.bat  converter12_10full.py  map.tmp  table.tmp
